syntax = "proto3";

option csharp_namespace = "ClientService.Protos";

package ClientService;

service JobC {
  rpc StartJob (StartJobRequest) returns (StartJobReply);
}

message StartJobRequest {

  string JobNumber = 2;
  string MachineName = 1;
}

message StartJobReply {
  string IsStarted = 1;
}